...
                                <rect key="frame" x="19" y="716" width="168" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="ZeroButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="168" id="7ie-Sk-hXV"/>
...
                                </buttonConfiguration>
                                <connections>
                                    <action selector="floatNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="svp-Zk-dGP"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="195" y="628" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="ThreeButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="9Nq-VL-jJB"/>
...
                                <rect key="frame" x="107" y="628" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="TwoButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="Idt-EQ-02a"/>
...
                                <rect key="frame" x="19" y="628" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="OneButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="Die-aL-UYn"/>
...
                                <rect key="frame" x="19" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="FourButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="NfY-Bm-HgM"/>
...
                                <rect key="frame" x="19" y="452" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="SevenButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="Mbf-ol-NZk"/>
...
                                <rect key="frame" x="107" y="452" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="EightButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="cNk-Am-HKe"/>
...
                                <rect key="frame" x="195" y="452" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="NineButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="6FG-bg-zJY"/>
...
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="AC">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="35"/>
                                </buttonConfiguration>
...
                                <rect key="frame" x="107" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="FiveButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="wFX-Ds-cAN"/>
...
                                <rect key="frame" x="195" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="SixButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="Ea5-QT-1p0"/>
...
                                <rect key="frame" x="283" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="MinusButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="CFJ-G6-YEw"/>
...
                                <rect key="frame" x="283" y="452" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="MultiplyButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="5gK-BC-Umh"/>
...
                                <rect key="frame" x="283" y="364" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="DevideButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="7mb-5J-6uj"/>
...
